--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -33,6 +33,7 @@
                                 <th>Description</th>
                                 <th>View</th>
                                 <th>Update</th>
+                                <th>Delete</th>
                             </tr>
                             </thead>
                             <tr th:remove="all">
@@ -52,6 +53,7 @@
                                 <td th:text="${recipe.description}">Tasty Goodness</td>
                                 <td><a href="#" th:href="@{'/recipe/show/'+${recipe.id}}">View</a> </td>
                                 <td><a href="#" th:href="@{'/recipe/' + ${recipe.id} + '/update'}">Update</a></td>
+                                <td><a href="#" th:href="@{'/recipe/' + ${recipe.id} + '/delete'}">Delete</a></td>
                             </tr>
                         </table>
                     </div>
